examples/effects/failing/01_missing_effect_in_helper.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/effects/failing/01_missing_effect_in_helper.flx
// error[E400]: Missing Ambient Effect
//
// Call to `println` requires effect `Console` in this function signature.
//
//   examples/effects/failing/01_missing_effect_in_helper.flx:28:5
//    |
// 28 |     println("missing Console")
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
//    |     -------------------------- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// Missing effect in an ordinary helper. Entry defaults do not make helpers
// ambiently effectful. Contrast with `../01_default_entry_handlers.flx`:
// that file has the same `println` call inside `main`, which gets
// compiler-synthesized default handlers; this `helper` is an ordinary
// function and must declare `with Console` explicitly.

fn helper() -> Unit {
    println("missing Console")
}

fn main() {
    helper()
}
